# kybernetes-2015

./: Makefile  dispatch_gps.cpp  garmingps.cpp  garmingps.hpp  garmingpsd.cpp  kybernetes.hpp  robomagellan.cpp  sensor_controller.cpp  serialdevice.cpp  serialdevice.hpp  test.cpp  utility.cpp  utility.hpp
avr/ArduinoGyro/: ArduinoGyro.ino
avr/EraseEEPROM/: EraseEEPROM.ino
avr/KybernetesMotion2/: KybernetesMotion2.ino
avr/KybernetesSensors2/: KybernetesSensors2.ino
avr/KybernetesSensors2Fallback/: KybernetesSensors2Fallback.ino
avr/Libraries/: RTIMU.h  RTIMUMPU9150.cpp  RTIMUSettings.h  RTMath.h
avr/Libraries/CalLib/: CalLib.h
avr/Libraries/RTIMULib/: RTIMULSM9DS0.cpp  RTIMUMPU9150.h
avr/MotionControllerOLD/: MotionControllerOLD.ino
avr/PassThroughMotion/: PassThroughMotion.ino
avr/libraries/CalLib/: CalLib.cpp
avr/libraries/NewPing/examples/NewPingEventTimer/: NewPingEventTimer.ino
avr/libraries/NewPing/examples/NewPingExample/: NewPingExample.ino
avr/libraries/RTIMULib/: RTFusionRTQF.cpp  RTFusionRTQF.h  RTIMU.cpp  RTIMULSM9DS0.h  RTIMULibDefs.h  RTIMUSettings.cpp  RTMath.cpp
computer/: .gitignore  CMakeLists.txt  Makefile  application.cpp  application.hpp  blob_track_demo.cpp  cv.hpp  garmingps.cpp  garmingps.hpp  kybernetes.hpp  motion_controller.cpp  motion_controller.hpp  readme.md  robomagellan.cpp  serialdevice.cpp  serialdevice.hpp  serialdispatchdevice.cpp  serialdispatchdevice.hpp  serialport.cpp  serialport.hpp  test.cpp  test.list  utility.cpp
computer/include/kybernetes/: kybernetes.hpp
computer/include/kybernetes/constants/: constants.hpp
computer/include/kybernetes/controller/: motion_controller.hpp  sensor_controller.hpp
computer/include/kybernetes/cv/: cv.hpp
computer/include/kybernetes/io/: serialdispatchdevice.hpp  serialport.hpp
computer/include/kybernetes/network/: serversocket.hpp  socket.hpp
computer/include/kybernetes/sensor/: garmingps.hpp  uvccamera.hpp  v4l2camera.hpp
computer/include/kybernetes/utility/: application.hpp  pollhandler.hpp  posixsignalhandler.hpp  utility.hpp
computer/old/: motion_controller.hpp  robomagellan.cpp  sensor_controller.hpp  serialdevice.hpp  sonartest.cpp  uvccamera.cpp  yuv422_bithreshold.s
computer/old/routes/: run1.list  test2.list  test3.list
computer/routes/: run1.txt  template.txt  test.txt
computer/src/kybernetes/controller/: motion_controller.cpp  sensor_controller.cpp
computer/src/kybernetes/io/: serialdispatchdevice.cpp  serialport.cpp
computer/src/kybernetes/network/: serversocket.cpp  socket.cpp
computer/src/kybernetes/sensor/: garmingps.cpp  uvccamera.cpp  v4l2camera.cpp
computer/src/kybernetes/utility/: application.cpp  pollhandler.cpp  posixsignalhandler.cpp  utility.cpp
computer/src/robomagellan/: findconetask.cpp  findconetask.hpp  main.cpp  movetotask.cpp  movetotask.hpp  task.hpp
computer/src/sensor_diagnostics/: main.cpp
computer/src/test/: apptest.cpp  collisiontest.cpp  drivetest.cpp  garmingpstest.cpp  imgdumptest.cpp  motiontest.cpp  sensortest.cpp  visiontest.cpp
